<resources>
    <string name="app_name">BlogApp</string>
    <string name="up_sign">Sign Up</string>
    <string name="in_sign">Sign In</string>
    <string name="welcome">BlogApp</string>
    <string name="wel_signup">BlogApp</string>
    <string name="wel_desc">From breaking news and entertainment to sports and politics, from big events to everyday interests. If it\'s happening anywhere, it\'s happening on Blogger</string>
    <string name="username_hint">"username "</string>
    <string name="password_hint">password</string>
    <string name="email_hint">email address</string>
    <string name="username_signup">username</string>
    <string name="fullname_hint">fullname</string>
    <string name="backtolog">Already have account!</string>
    <string name="batcktoregi">Dont have account? SignUp</string>
    <string name="content">post image</string>
    <string name="barazeli">Barazeli</string>
    <string name="comment">write a comment</string>
    <string name="btn_add_post">Share Post</string>
    <string name="addnewpost">New Post</string>
</resources>
