<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpSign"
    android:background="@color/black"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blog4"
        android:alpha=".25" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <!--    text welcom-->
    <TextView

        android:layout_gravity="center_horizontal"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:padding="10dp"
        android:text="@string/wel_signup"
        android:textColor="@color/blog_color"
        android:textSize="55sp"
        android:textStyle="bold"
        android:textAlignment="center"
           />
    <TextView
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/imprima"
        android:gravity="center"
        android:text="@string/wel_desc"
        android:textAlignment="center"
        android:textColor="@color/wel_desc"
        android:textSize="21sp"
        android:padding="10dp"
        android:textStyle="italic"
       />

    <!--            fullname edit text-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullname_signup"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:hint="@string/fullname_hint"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:textColorHint="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--        username edir text-->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_signup"
        android:paddingStart="14dp"
        android:layout_margin="8dp"
        android:paddingEnd="14dp"
            android:textColorHint="@color/white"
          >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>
    <!--        email address edit text-->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_margin="8dp"
            android:hint="@string/email_hint"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
            android:textColorHint="@color/white"
>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>
    <!--        password edit text -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:textColorHint="@color/white"
          >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

    <!--    button sign up-->
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/sign_up_insignup"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/up_sign"
        android:background="@drawable/up_sign_des"
        android:textColor="@color/white" />

    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/backtologin"
        android:text="@string/backtolog"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textSize="18sp"
        />




</RelativeLayout>