<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostAdd">
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/add_img"
        android:contentDescription="@string/content"
        android:scaleType="centerCrop"
        android:src="@drawable/add_poost"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/write_comment"
        android:hint="@string/comment"
        android:textColorHint="@color/black"
        android:layout_margin="8dp"
        android:padding="4dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.button.MaterialButton
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:id="@+id/btn_add_post"
    android:text="@string/btn_add_post"
    android:textAlignment="center"
    android:textSize="19sp"
    android:layout_margin="14dp"
    android:gravity="center_vertical"
    tools:ignore="RtlCompat" />


</LinearLayout>